--- a/BWYResFactory/Res.resx
+++ b/BWYResFactory/Res.resx
@@ -186,4 +186,7 @@
   <data name="106" xml:space="preserve">
     <value>请确保比较的双方类型一致</value>
   </data>
+  <data name="107" xml:space="preserve">
+    <value>该行状态处于已被删除</value>
+  </data>
 </root>
